unpackaged/main/default/objects/CC_Related_Product__c/CC_Related_Product__c.object-meta.xml
<CustomObject>
    <label>CC Related Product</label>
    <nameField>
        <displayFormat>CCP-{00000}</displayFormat>
        <label>CC Related Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>