unpackaged/main/default/objects/CC_Related_Product__c/fields/Change_Control__c.field-meta.xml
<CustomField>
        <fullName>Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>CC Related Products</relationshipLabel>
        <relationshipName>CC_Related_Products</relationshipName>
        <type>Lookup</type>
    </CustomField>