unpackaged/main/default/objects/CC_Related_Product__c/fields/Disposition__c.field-meta.xml
<CustomField>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Destroy</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Quarantine</fullName>
                </value>
                <value>
                    <fullName>Re-Mix</fullName>
                </value>
                <value>
                    <fullName>Re-Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>