unpackaged/main/default/objects/CC_Related_Product__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10023</fullName>
                </value>
                <value>
                    <fullName>48997</fullName>
                </value>
                <value>
                    <fullName>54003</fullName>
                </value>
                <value>
                    <fullName>98007</fullName>
                </value>
                <value>
                    <fullName>45008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>