unpackaged/main/default/objects/CC_Related_Product__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>CC Related Products</relationshipLabel>
        <relationshipName>CC_Related_Products</relationshipName>
        <type>Lookup</type>
    </CustomField>